--- a/my.catalog/AndroidManifest.xml
+++ b/my.catalog/AndroidManifest.xml
@@ -17,13 +17,16 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="my.catalog.MainActivity"
-            android:label="@string/app_name" 
             android:theme="@android:style/Theme.Light.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="my.catalog.CategoryListActivity"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
         </activity>
     </application>
 
