--- a/my.catalog/AndroidManifest.xml
+++ b/my.catalog/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="my.catalog.MainActivity"
+            android:name="my.catalog.CatalogActivity"
             android:theme="@android:style/Theme.Holo.Light" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+<!--         <activity
+            android:name="my.catalog.CatalogActivity"
+            android:theme="@android:style/Theme.Holo.Light" >
+        </activity> -->
         <activity
             android:name="my.catalog.CategoryListActivity"
             android:theme="@android:style/Theme.Holo.Light" >
