--- a/my.catalog/AndroidManifest.xml
+++ b/my.catalog/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    android:name=".MyCatalogApp"
     package="my.catalog"
     android:versionCode="1"
-    android:versionName="1.0"
-    android:name=".MyCatalogApp" >
+    android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -11,13 +11,15 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".MyCatalogApp"
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" 
-        android:name=".MyCatalogApp">
+        android:theme="@style/AppTheme" >
         <activity
             android:name="my.catalog.MainActivity"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
@@ -30,7 +32,7 @@
         <activity
             android:name="my.catalog.SplashScreenActivity"
             android:theme="@android:style/Theme.Holo.Light" >
-        </activity>        
+        </activity>
         <activity
             android:name="my.catalog.CatalogActivity"
             android:theme="@android:style/Theme.Holo.Light" >
